# agent-fetch

./: .env  .gitignore  pyproject.toml  requirements.txt  tools.py
agent/: llm_client.py  planning.py  simple_agent.py  tools_definitions.py
app/: main.py
app/api/: agent.py  alerts.py  crypto.py  history.py  schedules.py  weather.py
app/core/: config.py
app/models/: schemas.py
app/services/: alerts.py  history.py  schedules.py  storage.py
cli/: main.py
data/: crypto_bitcoin.json  crypto_ethereum.json  crypto_pepe.json  crypto_solana.json  weather_aliabad.json  weather_antarctica.json  weather_gokarna.json  weather_hyderabad.json  weather_japan.json  weather_lb_nagar.json  weather_manali.json  weather_new_york.json  weather_new_zealand.json  weather_saudi_arabia.json  weather_shamirpet.json  weather_tokyo.json  weather_usa.json  weather_vanasthalipuram.json  weather_warangal.json
frontend/: .gitignore  index.html
frontend/src/: App.jsx  main.jsx  styles.css
notifications/: telegram.py
scheduler/: jobs.py
